--- a/public/_this/virualDom/index.css
+++ b/public/_this/virualDom/index.css
@@ -1,2 +1,2 @@
-.index-module_test_8HCo2W{background:#0a870e}.index-module_data_8HCo2W{color:red}.test-module_test2_hs6sOq{background:#0a870e}.test-module_data2_hs6sOq{color:red}
+.index-module_test_8HCo2W{background:#0a870e}.index-module_data_8HCo2W{color:red}
 /*# sourceMappingURL=index.css.map */
