--- a/public/component/fer-hash/views/css/index.shadow.css
+++ b/public/component/fer-hash/views/css/index.shadow.css
@@ -3,8 +3,24 @@
     height: max-content;
     align-self: center;
     width: -moz-fit-content;
-    width: 100%;
-    margin: 0
+    width: auto;
+    margin: 0;
+    --word: 'САЙТ КОМПАНИИ';
+    --main-bg-color: blue;
+    --font-family: 'Rubik';
+    --text-color: #FFFFFF;
+    --font-size: 14px;
+    --font-weight: 500;
+    --line-height: 17px;
+    --stroke-width: 0;
+    --stroke-color: black;
+    --speed: 1s;
+    --easing: ease-in-out;
+    --animation-direction: normal;
+    --padding: .25em;
+    --margin: 1vh;
+    --letter-spacing: 0em;
+    --opacity: 0;
 }
 
 p {
@@ -58,6 +74,100 @@ p.welcome__header_link {
     cursor: pointer;
 }
 
-p.welcome__header_link.active {
 
+.word {
+    display: flex;
+    font-family: 'Rubik', sans-serif;
+    font-style: normal;
+    text-transform: uppercase;
+    position: relative;
+    perspective: 100px;
+    font-weight: var(--font-weight);
+    color: var(--text-color);
+    font-size: var(--font-size);
+    line-height: var(--line-height);
+    letter-spacing: var(--letter-spacing);
+    margin-right: var(--margin);
+    margin-left: var(--margin);
+    -webkit-text-fill-color: var(--text-color);
+    -webkit-text-stroke-width: var(--stroke-width);
+    -webkit-text-stroke-color: var(--stroke-color);
+    cursor: pointer;
+}
+
+.word__item {
+    /*-webkit-animation-duration: var(--speed);*/
+    /*animation-duration: var(--speed);*/
+    /*-webkit-animation-timing-function: var(--easing);*/
+    /*animation-timing-function: var(--easing);*/
+    /*-webkit-animation-iteration-count: 1;*/
+    /*animation-iteration-count: 1;*/
+    /*-webkit-animation-direction: var(--animation-direction);*/
+    /*animation-direction: var(--animation-direction);*/
+    padding: 0 var(--padding);
+}
+
+.word__item {
+    -webkit-animation-duration: var(--speed);
+    animation-duration: var(--speed);
+    -webkit-animation-timing-function: var(--easing);
+    animation-timing-function: var(--easing);
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+    -webkit-animation-direction: var(--animation-direction);
+    animation-direction: var(--animation-direction);
+}
+
+.word__item:after {
+    content: var(--word);
+}
+
+.word__item--left {
+    transform-origin: center left;
+    -webkit-animation-name: shrinkx;
+    animation-name: shrinkx;
+}
+
+.word__item--right {
+    transform-origin: center right;
+    -webkit-animation-name: growx;
+    animation-name: growx;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+@-webkit-keyframes shrinkx {
+    from {transform: scalex(1) skewx(0deg); opacity: 1}
+    to {
+        font-weight: bold;
+        transform: scalex(0) skewx(0); opacity: var(--opacity)
+    }
+}
+
+@keyframes shrinkx {
+    from {transform: scalex(1) skewx(0deg); opacity: 1}
+    to {transform: scalex(0) skewx(0); opacity: var(--opacity)}
+}
+
+@-webkit-keyframes growx {
+    from {transform: scalex(0) skewx(0); opacity: var(--opacity)}
+    to {transform: scalex(1) skewx(0) ; opacity: 1}
+}
+
+@keyframes growx {
+    from {transform: scalex(0) skewx(0); opacity: var(--opacity)}
+    to {transform: scalex(1) skewx(0) ; opacity: 1}
+}
+
+@-webkit-keyframes wordAnim {
+    0% {transform: translate3d(-100px, 0, 0) rotate(-10deg) scale(1)}
+    50% {transform: translate3d(100px, 0, 0) rotate(10deg) scale(.5)}
+    100% {transform: translate3d(-100px, 0, 0) rotate(-10deg) scale(1)}
+}
+
+@keyframes wordAnim {
+    0% {transform: translate3d(-100px, 0, 0) rotate(-10deg) scale(1)}
+    50% {transform: translate3d(100px, 0, 0) rotate(10deg) scale(.5)}
+    100% {transform: translate3d(-100px, 0, 0) rotate(-10deg) scale(1)}
 }
