--- a/public/component/welcome-book/views/css/index.shadow.css
+++ b/public/component/welcome-book/views/css/index.shadow.css
@@ -1,6 +1,6 @@
 :host {
 	width: 100%;
-	/*background-image: url(/_this/img/north_tower.png);*/
+	/*background-image: url(/this/img/north_tower.png);*/
 	background-size: cover;
 	overflow: auto;
 }
@@ -97,12 +97,12 @@
 
 #welcome1 {
 	width: 100%;
-	background-image: url('/_this/img/pg1.png');
+	background-image: url('/this/img/pg1.png');
 	background-size: cover;
 }
 #welcome2 {
 	width: 100%;
-	background-image: url('/_this/img/pg2.png');
+	background-image: url('/this/img/pg2.png');
 	background-size: cover;
 }
 
@@ -128,14 +128,14 @@
 }
 
 .welcome__pg1 {
-	background-image: url('/_this/img/pg1.png');
+	background-image: url('/this/img/pg1.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
 }
 
 .welcome__pg2 {
-	background-image: url('/_this/img/pg2.png');
+	background-image: url('/this/img/pg2.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
@@ -143,7 +143,7 @@
 }
 
 .welcome__pg3 {
-	background-image: url('/_this/img/pg3.png');
+	background-image: url('/this/img/pg3.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
@@ -151,7 +151,7 @@
 }
 
 .welcome__pg4 {
-	background-image: url('/_this/img/pg4.png');
+	background-image: url('/this/img/pg4.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
@@ -159,7 +159,7 @@
 }
 
 .welcome__pg5 {
-	background-image: url('/_this/img/pg5.png');
+	background-image: url('/this/img/pg5.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
@@ -167,7 +167,7 @@
 }
 
 .welcome__pg6 {
-	background-image: url('/_this/img/pg6.png');
+	background-image: url('/this/img/pg6.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
@@ -175,7 +175,7 @@
 }
 
 .welcome__pg7 {
-	background-image: url('/_this/img/pg7.png');
+	background-image: url('/this/img/pg7.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
@@ -183,7 +183,7 @@
 }
 
 .welcome__pg8 {
-	background-image: url('/_this/img/pg8.png');
+	background-image: url('/this/img/pg8.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
@@ -191,7 +191,7 @@
 }
 
 .welcome__pg9 {
-	background-image: url('/_this/img/pg9.png');
+	background-image: url('/this/img/pg9.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
@@ -199,7 +199,7 @@
 }
 
 .welcome__pg10 {
-	background-image: url('/_this/img/pg10.png');
+	background-image: url('/this/img/pg10.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
@@ -207,7 +207,7 @@
 }
 
 .welcome__pg11 {
-	background-image: url('/_this/img/pg11.png');
+	background-image: url('/this/img/pg11.png');
 	background-size: cover;
 	width: 100%;
 	height: 100vh;
