--- a/_sandbox/welcomebook/src/component/welcome-section/views/css/index.shadow.css
+++ b/_sandbox/welcomebook/src/component/welcome-section/views/css/index.shadow.css
@@ -4,6 +4,9 @@
 	overflow: hidden;
 	margin: 0;
 	padding: 0;
+	--speedAnimationImageTop: 1500;
+	--speedAnimationImageBottom: 2000;
+	--speedAnimationContent: 2000;
 }
 
 p {
@@ -120,10 +123,10 @@ h1 {
 }
 
 .teaser {
+	position: relative;
 	display: flex;
 	flex-direction: column;
-	position: relative;
-	height: 110vh;
+	height: 100vh;
 	width: 100%;
 	/*background: #0000cc;*/
 }
@@ -134,6 +137,7 @@ h1 {
 }
 
 .teaser .content, .teaser .first-page {
+	position: relative;
 	width: 100%;
 	display: flex;
 	justify-content: flex-start;
@@ -145,7 +149,7 @@ h1 {
 	position: absolute;
 	padding: 0;
 	width: auto;
-	min-width: 1920px;
+	/*min-width: 1920px;*/
 	/*background: #FF4F12;*/
 }
 
@@ -166,11 +170,6 @@ h1 {
 }
 
 .description {
-	--offset: 0;
-	transform: translateY(var(--offset));
-}
-
-.content {
 	--offset: 0;
 	transform: translateY(var(--offset));
 }
@@ -268,15 +267,11 @@ h1 {
 }
 
 .image-scale {
-	--scale: 1;
-	transform: scale(var(--scale));
+	/*transform: scale(var(--scale));*/
 	/*position: absolute;*/
-
 }
 
 .opacity {
-	--opacity: 1;
-	opacity: var(--opacity);
 	position: absolute;
 }
 
