--- a/public/static/html/components/api-relation/shadow/api-relation.css
+++ b/public/static/html/components/api-relation/shadow/api-relation.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    flex-grow: 1
+    flex-grow: 1;
+    margin: 0;
 }
 
 section#api-relation {
