add dynamic load html conetent

--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -245,7 +245,7 @@
                 <div class='content'>
                     <div class="description-without-background-item-3">
                         <div class="description-page">
-                            <p class="text-offset description-about-resources">ИНФОРМАЦИЯ О РЕСУРСАХ И ДОКУМЕНТАХ</p>
+                            <p class="text-offset description-about-resources description-about-resources-4">ИНФОРМАЦИЯ О РЕСУРСАХ И ДОКУМЕНТАХ</p>
                             <ul class="text-offset description-ul-3">
                                 <li>CRM ресурсы</li>
                                 <li>Почта</li>
@@ -313,9 +313,10 @@
                     <div class="container-name">
                         <label for="name">Имя</label>
                         <input type="text" id="name"/>
+                        <img class="feedback-icon" src="./this/icons/input_name.svg">
                     </div>
                     <div class="container-information">
-                        <textarea class="container-information-textarea"></textarea>
+                        <textarea placeholder="Добавьте ваши комментарии..." class="container-information-textarea"></textarea>
                     </div>
                     <div class="form__buttons">
                         <slot name="fer-form__cancel"></slot>
