--- a/public/this/css/index.light.css
+++ b/public/this/css/index.light.css
@@ -1,4 +1,10 @@
 /*https://codepen.io/sarazond/pen/LYGbwj*/
+body {
+    padding-left: 0.4vw;
+    padding-right: 0.4vw;
+    box-sizing: border-box;
+    /*background: rgba(238, 32, 204, 0.57);*/
+}
 .dialog {
     position: absolute;
     top: 0;
