--- a/template/system/index.html
+++ b/template/system/index.html
@@ -1,6 +1,10 @@
-<template id="system">
-    <api-substrate slot="system" class="system">
-        <section>
+<template>
+    <api-substrate
+        data-csslight
+        slot="system"
+        class="system"
+    >
+        <section id="system">
             <div class="main-top"></div>
             <div id="shadow" class="main-center">
                 <div slot ="grid__header" class="grid__header">
@@ -75,9 +79,9 @@
             </api-time>
         </api-footer>
         <api-footer slot="footer_substrate">
-            <p class="grid__footer_substrate_title">Zababurin Sergey</p>
-            <p class="grid__footer_substrate_mail">Email: <a href="mailto:zababurins@vk.com">zababurins@vk.com</a></p>
-            <p class="grid__footer_substrate_tel">Phone: <a href="tel:+79531437072">+7 953-143-70-72</a></p>
+                <p class="grid__footer_substrate_title">Zababurin Sergey</p>
+                <p class="grid__footer_substrate_mail">Email: <a href="mailto:zababurins@vk.com">zababurins@vk.com</a></p>
+                <p class="grid__footer_substrate_tel">Phone: <a href="tel:+79531437072">+7 953-143-70-72</a></p>
         </api-footer>
         <api-footer slot="footer_property">
             <div class="footer-time">
