--- a/public/component/link-auction/views/css/index.shadow.css
+++ b/public/component/link-auction/views/css/index.shadow.css
@@ -1,11 +1,11 @@
-/* :host { */
-/* border-radius: 0.2vw; */
-/* width: 3vw; */
-/* background: transparent; */
-/* user-select: none; */
-/* border: 0.1vw solid rgba(118, 148, 244, 0.45); */
-/* cursor: pointer; */
-/* } */
+:host {
+    height: -moz-max-content;
+    height: max-content;
+    align-self: center;
+    width: -moz-fit-content;
+    width: 100%;
+    margin: 0
+}
 
 :root {
     --brassica: #758a7a;
@@ -30,6 +30,10 @@
     --size4: 1.4vw;
     --size5: 2vw;
     --size6: 2.4vw
+}
+
+body {
+    overflow-x: hidden
 }
 
 .skeleton-box::after {
@@ -97,25 +101,7 @@ p.auction-data__header_button {
     user-select: none
 }
 
-.auction-link__active {
+p.auction-link__active {
     text-shadow: rgb(0, 0, 0, 0.3) 0 0 1.5vw;
-    background: rgb(59 149 241 / 45%);
-}
-
-.substrat__relation_button, .substrat__property_button {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: auto;
-    text-align: center;
-    height: 1.7vw;
-    border-radius: 0.1vw;
-    width: 100%;
-    font-size: 1vw;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-    border: 0.1vw solid rgba(118, 148, 244, 0.45);
-    cursor: pointer;
-    box-sizing: border-box;
+    background: firebrick;
 }
