--- a/_sandbox/welcomebook/src/component/welcome-feedback/views/css/index.shadow.css
+++ b/_sandbox/welcomebook/src/component/welcome-feedback/views/css/index.shadow.css
@@ -18,6 +18,17 @@
 	display: flex;
 	flex-direction: column;
 	align-items: baseline;
+	position: relative;
+}
+
+.feedback-icon {
+	position: absolute;
+	width: 1.35417vw;
+	height: 1.35417vw;
+	left: 0;
+	top: calc(37% - 0.26042vw);
+	box-sizing: border-box;
+	margin-left: 0.52083vw;
 }
 
 .container-name label {
@@ -25,10 +36,14 @@
 }
 
 .container-name input {
-	width: 18.22917vw;
-	padding: 0px;
+	width: 100%;
 	margin-bottom: 1.5625vw;
 	height: 2.34375vw;
+	margin-right: 0;
+	box-sizing: border-box;
+	border-radius: 0.46875vw;
+	border: unset;
+	padding: 0px 0px 0px 1.875vw;
 }
 
 .container-information {
@@ -41,9 +56,32 @@
 
 .container-information-textarea {
 	width: 100%;
-	padding: 0;
 	box-sizing: border-box;
-	height: 6.25vw;
+	height: 100%;
+	background: rgb(255, 255, 255);
+	border: 0.05208vw solid rgb(255, 255, 255);
+	border-radius: 0.46875vw;
+	padding: 0.52083vw;
+}
+
+.container-information-textarea::-moz-placeholder {
+	font-family: 'Raleway', serif;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 0.625vw;
+	line-height: 0.72917vw;
+	color: #666666;
+	box-sizing: border-box;
+}
+
+.container-information-textarea::placeholder {
+	font-family: 'Raleway', serif;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 0.625vw;
+	line-height: 0.72917vw;
+	color: #666666;
+	box-sizing: border-box;
 }
 
 .form__buttons {
