--- a/_sandbox/welcomebook/src/component/welcome-menu/views/css/index.shadow.css
+++ b/_sandbox/welcomebook/src/component/welcome-menu/views/css/index.shadow.css
@@ -1,5 +1,5 @@
 :host {
-	top: 25vh;
+	top: calc(50% - 8rem);
 	position: absolute;
 	left: -30vw;
 	z-index: 2;
@@ -20,9 +20,9 @@
 .container {
 	display: flex;
 	color: white;
-	height: 80vh;
+	height: 100%;
 	flex-direction: row;
-	gap: 1.35417vw;
+	gap: 1.35417rem;
 	padding-left: 3.90625rem;
 }
 
@@ -45,7 +45,7 @@
 	display: flex;
 	flex-direction: column;
 	align-self: center;
-	margin-top: 0.3125vw;
+	/*margin-top: 2vh;*/
 	transition: top 1s ease 0s;
 }
 
