--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -902,6 +902,8 @@
         <div class="item"></div>
         <div class="item"></div>
         <div class="item"></div>
+        <div class="item"></div>
+        <div class="item"></div>
     </div>
     </body>
 </template>
