--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -407,25 +407,25 @@
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p class='section_content_body_p'>
+                    <p data-delay="1500" class='section_content_body_p  has-animation animation-ltr'>
                         Wo de Ostseewellen trecken an den Strand, wo de gäle Ginster bleught in' Dünensand, wo de Möwen
                         schriegen grell in't Stormgebrus, dor is mine Heimat, dor bün ick tau Hus.
                     </p>
-                    <p class='section_content_body_p'>
+                    <p data-delay="1800" class='section_content_body_p  has-animation animation-rtl'>
                         Наша компания разделена на Бизнес-единицы, функциональные подразделения, которые полностью
                         отвечают
                         за реализацию проектов в своей зоне ответственности: Федеральный проектный офис, Региональный
                         проектный офис, Ведомственный проектный офис, Дирекция управления данными, в реализации их задач
                         помогают Техническая и Операционная дирекция, и, конечно Бэк-офис.
                     </p>
-                    <p class='section_content_body_p'>
+                    <p data-delay="1200" class='section_content_body_p has-animation animation-ltr'>
                         Также в структуре Кластера есть несколько продуктовых компаний (мы их называем ДЗО – дочернее
                         зависимое общество).
                     </p>
-                    <p class='section_content_body_p'>
+                    <p data-delay="2000"  class='section_content_body_p has-animation animation-rtl'>
                         Информация о продуктах ДЗО будет в следующем разделе.
                     </p>
-                    <p class='section_content_body_p'>
+                    <p data-delay="1000"  class='section_content_body_p has-animation animation-ltr'>
                         Подробно со структурой компании и топ-менеджерами ты можешь познакомиться на корпоративном
                         портале.
                     </p>
@@ -656,7 +656,7 @@
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p class='section_content_body_p'>
+                    <p  data-delay="1500" class='section_content_body_p has-animation animation-ltr'>
                         У нас гибридный формат работы, это означает, что в определенные дни недели ты можешь работать
                         вне
                         офиса, соблюдая при этом установленный рабочий график. Обычно рабочий день длится с 10-00 до
@@ -665,13 +665,13 @@
                         временном
                         интервале.
                     </p>
-                    <p class='section_content_body_p'>
+                    <p data-delay="1500" class='has-animation animation-rtl section_content_body_p'>
                         Важно, чтобы все задачи были выполнены в срок.
                     </p>
-                    <p class='section_content_body_p'>
+                    <p data-delay="2000"  class='section_content_body_p has-animation animation-ltr'>
                         Я сильно опаздываю, т.к. попал в пробку, переводил бабушку через дорогу…, что мне делать?
                     </p>
-                    <p class='section_content_body_p'>
+                    <p data-delay="1800"  class='section_content_body_p has-animation animation-ltr'>
                         Позвони своему руководителю и предупреди о происшествии. Если тебе необходимо отлучиться на
                         некоторое время в течение рабочего дня или уйти до официального окончания рабочего дня, ты
                         должен
