--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -52,9 +52,12 @@
                 class="welcome-body_section_1_0"
                 style="display: none"
         >
+            <slot name="welcome-logo"></slot>
+            <slot name="fer-scroll"></slot>
             <section data-id="0">
                 <slot name="welcome-section_1_0"></slot>
             </section>
+
         </div>
         <div
                 data-id="2"
