--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -258,16 +258,16 @@
                     <div class="description-page">
                         <p class="text-offset description-about-compeny">Важное о компании</p>
                         <ul class="text-offset description-ul-1">
-                            <li>Структура компании</li>
-                            <li>Наши продукты</li>
-                            <li>Что мы ценим друг в друге?</li>
-                            <li>График работы</li>
-                            <li>Дресс-код</li>
-                            <li>Переговорные комнаты</li>
-                            <li>Зарплата</li>
-                            <li>Отпуск</li>
-                            <li>Обед</li>
-                            <li>Прочие радости</li>
+                            <li data-id="1_0">Структура компании</li>
+                            <li data-id="1_1">Наши продукты</li>
+                            <li data-id="1_2">Что мы ценим друг в друге?</li>
+                            <li data-id="1_3">График работы</li>
+                            <li data-id="1_4">Дресс-код</li>
+                            <li data-id="1_5">Переговорные комнаты</li>
+                            <li data-id="1_6">Зарплата</li>
+                            <li data-id="1_7">Отпуск</li>
+                            <li data-id="1_8">Обед</li>
+                            <li data-id="1_9">Прочие радости</li>
                         </ul>
                     </div>
                 </div>
@@ -286,10 +286,10 @@
                     <div class="description-page-section-2">
                         <p class="text-offset description-about-resources">КОРПОРАТИВНАЯ КУЛЬТУРА</p>
                         <ul class="text-offset description-ul-2">
-                            <li>Обращение к коллегам</li>
-                            <li>Лого, официальные бланки, реквизиты</li>
-                            <li>Программа рекомендаций</li>
-                            <li>Корпоративные праздники</li>
+                            <li data-id="2_0">Обращение к коллегам</li>
+                            <li data-id="2_1">Лого, официальные бланки, реквизиты</li>
+                            <li data-id="2_2">Программа рекомендаций</li>
+                            <li data-id="2_3">Корпоративные праздники</li>
                         </ul>
                     </div>
                 </div>
@@ -309,13 +309,13 @@
                         <p class="text-offset description-about-resources description-about-resources-4">ИНФОРМАЦИЯ О
                             РЕСУРСАХ И ДОКУМЕНТАХ</p>
                         <ul class="text-offset description-ul-3">
-                            <li>CRM ресурсы</li>
-                            <li>Почта</li>
-                            <li>Принтер и сканер</li>
-                            <li>Техническое оборудование</li>
-                            <li>Корпоративная онлайн библиотека</li>
-                            <li>Заказ канцелярии</li>
-                            <li>Пропускная система</li>
+                            <li data-id="2_0">CRM ресурсы</li>
+                            <li data-id="2_1">Почта</li>
+                            <li data-id="2_2">Принтер и сканер</li>
+                            <li data-id="2_3">Техническое оборудование</li>
+                            <li data-id="2_4">Корпоративная онлайн библиотека</li>
+                            <li data-id="2_5">Заказ канцелярии</li>
+                            <li data-id="2_6">Пропускная система</li>
                         </ul>
                     </div>
                 </div>
